--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@apollo/client": "^3.7.17",
     "apollo-server": "^3.12.0",
     "graphql": "^16.7.1",
-    "node-fetch": "^3.3.1"
+    "node-fetch": "^3.3.1",
+    "react-router-dom": "^6.14.2"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
